--- a/src/Navbar.css
+++ b/src/Navbar.css
@@ -5,13 +5,13 @@ navbar{
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 5vw;
+    width: 70px;
     height: 100vh;
     background-color: #05043e;
 }
 navbar i{
     color: #fff;
-    margin: 25px 0;
+    margin: 25px 0 !important;
     opacity: 0.8;
     font-size: 1.45rem !important;
 }
@@ -19,5 +19,21 @@ navbar i:hover{
     opacity: 1;
 }
 navbar img{
-    margin: 40px 0 80px;
+    margin: 40px 0 80px !important;
+}
+@media (max-width:760px){
+    navbar{
+        bottom: 0 !important;
+        left:0;
+        height: 70px !important;
+        width: 100vw;
+        flex-direction: row;
+        justify-content: space-between;
+    }
+    navbar i{
+        margin: 0 15px !important;
+    }
+    navbar img{
+        display: none;
+    }
 }
