--- a/src/Editor.css
+++ b/src/Editor.css
@@ -1,5 +1,5 @@
 .editor{
-    margin-left: 5vw !important;
+    margin-left: 7vw !important;
 
 }
 .titlebar{
@@ -32,5 +32,8 @@
     .editor textarea{
         width: 85%;
         height: 100vh;
+    }
+    .editor{
+        margin-left: 5px !important;
     }
 }
