--- a/src/Navbar.css
+++ b/src/Navbar.css
@@ -1,7 +1,7 @@
 navbar{
-    position: fixed;
+    /* position: fixed;
     top: 0;
-    left: 0;
+    left: 0; */
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -23,8 +23,8 @@ navbar img{
 }
 @media (max-width:760px){
     navbar{
-        bottom: 0 !important;
-        left:0;
+        /* bottom: 0 !important;
+        left:0; */
         height: 70px !important;
         width: 100vw;
         flex-direction: row;
