--- a/src/Home.css
+++ b/src/Home.css
@@ -10,6 +10,17 @@
     font-weight: bold;
     font-family: 'Montaga', serif;
 }
+.card__header{
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+}
+.card__header button{
+    border: none;
+    background: none;
+    outline: none;
+    opacity: 0.6;
+}
 button h5{
     font-size: 1.5rem;
     font-weight: 300;
